make some change

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: post-index
-title: "Welcome to the Neo-HPSTR Blog"
-description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
-comments: false
+title: "一名老程序员的思考碎片"
+description: "袁英杰的博客."
+tags: [design, c++, haskell, oo, fp]
+comments: true
 ---
 
 {% for post in paginator.posts %}
